--- a/next-ui-consumer/package.json
+++ b/next-ui-consumer/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "cors": "^2.8.5",
     "next": "9.5.5",
     "react": "17.0.0",
     "react-dom": "17.0.0"
